revno: 12781 message:   Dashboard, css fix for search div to avoid add link to break onto new line
committer: Lars Helge Øverland <larshelge@gmail.com>
branch nick: dhis2
timestamp: Mon 2013-10-21 18:30:59 +0200

--- a/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/style/dashboard.css
+++ b/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/style/dashboard.css
@@ -255,15 +255,14 @@
 #hitDiv .viewLink
 {
   display: inline-block;
-  padding: 7px 5px 7px 12px;
-  width: 410px;
+  padding: 7px 2.5%;
+  width: 83%;
 }
 
 #hitDiv .addLink
 {
-  float: right;
   display: inline-block;
-  padding: 9px 15px 7px 15px;
+  padding: 9px 3% 7px 3%;
 }
 
 .hitHeader
@@ -321,6 +320,7 @@
 
 #addDashboardForm
 {
+  padding-top: 12px;
   display: none;
 }
 
